--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,16 @@
 {
-  "cSpell.words": ["MARGA", "OLDF", "Pritz", "roboto"]
+  "cSpell.words": [
+    "adie",
+    "Aiden",
+    "Apéro",
+    "Fgrape",
+    "Glime",
+    "Gmango",
+    "MARGA",
+    "OLDF",
+    "Prits",
+    "Pritz",
+    "roboto",
+    "YUZU"
+  ]
 }
